# ICD

./: .dockerignore  AI_README.md  MIGRATION_YAML.md  TESTING.md
icdgen/: .gitignore  README.md  icdgen.spec  pyi_rth_docx.py  pyproject.toml  requirements.txt  run.py
icdgen/examples/: icd_demo.xml  icd_demo_revC.xml  icd_demo_revD.xml  icd_evtol_revA.xml  icd_evtol_revA.yaml  icd_evtol_revB.xml  icd_evtol_revB.yaml  icd_evtol_revC.xml  icd_evtol_revC.yaml  icd_example.json  icd_example.xml
icdgen/icdgen/: __init__.py  __main__.py  cli.py  diff.py  fields.py  gen_code.py  gen_diff_pdf.py  gen_docx.py  gen_pdf.py  gen_trace.py  loader.py  model.py  ooxml_determinism.py  provenance.py  resources.py  rev_summary.py  schema_gen.py  serializer.py  signal_codec.py
icdgen/icdgen/schemas/: icd-1.0.xsd.template
icdgen/icdgen/templates/: header.h.j2  simulink_bus.m.j2
icdgen/tests/: test_icdgen.py
icdweb/: Dockerfile  README.md  docker-compose.yml
icdweb/backend/: requirements.txt
icdweb/backend/app/: main.py  reqgen_service.py  schemas.py  service.py
icdweb/backend/tests/: test_api.py
icdweb/frontend/: index.html  package-lock.json  package.json  vite.config.js
icdweb/frontend/src/: App.jsx  DiffPanel.jsx  Diffpanel.jsx  GeneratePanel.jsx  InterfaceEditor.jsx  MetadataEditor.jsx  PacketEditor.jsx  ReqgenPanel.jsx  SignalTable.jsx  api.js  styles.css
reqgen/: README.md  pyproject.toml  reconcile.py
reqgen/config/: reqgen.json
reqgen/reqgen/: __init__.py  cli.py  config_io.py  config_schema.py  export.py  gen_trace.py  generate.py  paths.py  provenance.py  trace.py
reqgen/reqgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reqgen/tests/: test_reqgen.py
