[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "icdgen"
version = "1.6.0"
description = "Deterministic ICD artifact generator for certifiable avionics (ARP4754A / DO-178C / DO-254)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Avionics Systems Engineering" }]
# Exact pins: output must be byte-reproducible, so dependency versions are
# locked to those that produced the verified deterministic baseline. See
# requirements.txt and AI_README "Determinism contract" before bumping.
dependencies = [
    "lxml==6.0.2",
    "jsonschema==4.26.0",
    "python-docx==1.2.0",
    "reportlab==4.4.10",
    "Jinja2==3.1.6",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pyinstaller>=6"]  # dev tools do not affect output bytes

[project.scripts]
icdgen = "icdgen.cli:main"

[tool.setuptools]
packages = ["icdgen"]

[tool.setuptools.package-data]
icdgen = ["templates/*.j2", "schemas/*.xsd", "schemas/*.template"]

# The XSD template is SINGLE-SOURCED inside the package at
# icdgen/schemas/icd-1.0.xsd.template (shipped via package-data above, so it is
# present in both source checkouts and pip wheels). resources.py resolves only
# that one location; there is no repo-root copy to drift. The PyInstaller spec
# bundles the same package path under MEIPASS.
